src/objects/WES_Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>CompanyInfoComplete__c</fullName>
        <formula>AND(
NOT(ISBLANK(Account__c)), 				
NOT(ISBLANK(Business_Entity_Type__c)),
NOT(ISBLANK(TEXT(Account__r.WES_BusinessCategory__c))),				  
NOT(ISBLANK(Account__r.WES_Num_years_trading__c)),
NOT(ISBLANK(Account__r.Physical_Street_Address__c )),
NOT(ISBLANK(Account__r.Physical_City__c)),
NOT(ISBLANK(TEXT(Account__r.WES_ISO_Country_Code__c))), 
NOT(ISBLANK(Account__r.WES_VAT_Reg_Num__c)) || Account__r.WES_NoVATAvailable__c = TRUE,
IF(OR(
				Business_Entity_Type__c = &quot;Limited Company&quot;,
				Business_Entity_Type__c = &quot;Public Limited Company&quot;,
				Business_Entity_Type__c = &quot;Charity or Trust&quot;,
				Business_Entity_Type__c = &quot;Limited Liability Partnership&quot;)
    &amp;&amp; ISBLANK(Account__r.Company_registration_number__c) = TRUE, FALSE, TRUE)  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks required fields based on their Business Entity Type</inlineHelpText>
        <label>Company Info Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Financials_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Financials Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_IFCS_Record_ID__c</fullName>
        <description>Related Company&apos;s IFCS record ID. Indicates a succesful asynchronous response back from IFCS.</description>
        <formula>Account__r.IFCS__c</formula>
        <label>Company IFCS Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Owner for WES Application Request</relationshipLabel>
        <relationshipName>WES_Application_Requests_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Reg_Num__c</fullName>
        <formula>Account__r.Company_registration_number__c</formula>
        <label>Company Registration #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_registration_number__c</fullName>
        <description>Populated by workflow related to Company value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company registration number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactInfoComplete__c</fullName>
        <formula>AND(
				NOT(ISBLANK(Primary_Contact__r.FirstName)),
    NOT(ISBLANK(Primary_Contact__r.LastName)),				
    NOT(ISBLANK(TEXT(Primary_Contact__r.Salutation))),
    NOT(ISBLANK(Primary_Contact__r.Phone)),
				NOT(ISBLANK(TEXT(Primary_Contact__r.WES_Role__c))),
				 
IF(Business_Entity_Type__c = &quot;Sole Proprietor&quot; &amp;&amp;				
    OR(
				ISBLANK(Company_Owner__r.FirstName),
    ISBLANK(Company_Owner__r.LastName),				
    ISBLANK(Company_Owner__r.Date_Of_Birth__c),
    ISBLANK(TEXT(Company_Owner__r.Salutation)),
				ISBLANK(Company_Owner__r.Home_Address_1__c),
				ISBLANK(Company_Owner__r.Home_Address_City__c), 
				ISBLANK(Company_Owner__r.Home_Postcode__c), 
    ISBLANK(Company_Owner__r.Phone)) = TRUE, FALSE, TRUE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Contact required fields must be complete and Owner fields as well if sole proprietor. Must include name Title.</inlineHelpText>
        <label>Contact Info Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateVelocityAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is based on whether this Customer requires webaccess or not</description>
        <label>Create Velocity Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Fuel_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers an Apex class that creates Fuel Cards based on default values.</description>
        <inlineHelpText>Fuel Card Packs with Driver/VRN along with Card Defaults for each card type must be entered before Fuel Cards can be created.</inlineHelpText>
        <label>Create Fuel Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditAgentAssigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Agent Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Role_Name__c</field>
                <operation>contains</operation>
                <value>WES Credit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>WES_Application_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditInsuranceDecisionDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Insurance Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditInsuranceDecisions__c</fullName>
        <label>Credit Insurance Decisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Approved in full</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Partially approved</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Referred</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Approved with Conditions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditLevelRequestApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Level Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditLimitFormula__c</fullName>
        <formula>MCEILING((((MonthlyFuelVolumeLitres__c * VolumeConversionFormula__c) / 4)* WeeksDrawPayment__c) / 1000)*1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Authorised_Limit__c</fullName>
        <description>The approved credit limit for this application.
Has maximum of 11 decimal (includes .00)</description>
        <inlineHelpText>Manually entered by Credit Analyst</inlineHelpText>
        <label>Credit Authorised Limit</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_BureWES_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit BureWES Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Visible only to Credit</inlineHelpText>
        <label>Credit Decision Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Decision__c</fullName>
        <label>Credit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Unable to Process</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Insurance_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Visible only to Credit Team</inlineHelpText>
        <label>Credit Insurance Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentPrice__c</fullName>
        <inlineHelpText>Pence per Litre</inlineHelpText>
        <label>Current Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currently_Buy_Fuel__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;AA&quot;), &quot;AA; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Ace Fuel Cards&quot;), &quot;Ace Fuel Cards; &quot;,&quot;&quot;) +
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Advance Fuel Cards&quot;), &quot;Advance Fuel Cards; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;AID Fuel Card Services&quot;), &quot;AID Fuel Card Services; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Allied Fuels&quot;), &quot;Allied Fuels; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Allstar&quot;), &quot;Allstar; &quot;,&quot;&quot;) +
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;AS24&quot;), &quot;AS24; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Be Fuel Cards&quot;), &quot;Be Fuel Cards; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;BP Direct&quot;), &quot;BP Direct; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Bulk&quot;), &quot;Bulk; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Bunkercard&quot;), &quot;Bunkercard; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;BWOC&quot;), &quot;BWOC; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Cambrian&quot;), &quot;Cambrian; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Carlton&quot;), &quot;Carlton; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Cash&quot;), &quot;Cash; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Cheque&quot;), &quot;Cheque; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;CH Jones&quot;), &quot;CH Jones; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;CPL Petroleum&quot;), &quot;CPL Petroleum; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Credit Card&quot;), &quot;Credit Card; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;CSC&quot;), &quot;CSC; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;DCI&quot;), &quot;DCI; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Debit Card&quot;), &quot;Debit Card; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Diesel Direct&quot;), &quot;Diesel Direct; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Dieselink&quot;), &quot;Dieselink; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;DKV&quot;), &quot;DKV; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Esso Direct&quot;), &quot;Esso Direct; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fastfuel&quot;), &quot;Fastfuel; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;FTA&quot;), &quot;FTA; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuel Card Services&quot;), &quot;Fuel Card Services; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuelcardsonline.co.uk (FCS)&quot;), &quot;Fue; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuelgenie&quot;), &quot;Fuelgenie; &quot;,&quot;&quot;) +
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuellogic&quot;), &quot;Fuellogic; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuelmate&quot;), &quot;Fuelmate; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuelplus&quot;), &quot;Fuelplus; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Fuelwise&quot;), &quot;Fuelwise; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Jet&quot;), &quot;Jet; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Keyfuels&quot;), &quot;Keyfuels; &quot;,&quot;&quot;) +
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Local Account&quot;), &quot;Local Account; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Morgans&quot;), &quot;Morgans; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;NWF&quot;), &quot;NWF; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;Owen Fules&quot;), &quot;Owen Fules; &quot;,&quot;&quot;) + 
IF(INCLUDES(Opportunity__r.WES_fuel__c, &quot;RAC&quot;), &quot;RAC; &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>These options are selected on the related Opportunity.</inlineHelpText>
        <label>How they currently buy fuel?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDMandateCompleteTimestamp__c</fullName>
        <description>Time Stamps when Direct Debit Mandate is complete</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DD Mandate Complete Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DDMandateComplete__c</fullName>
        <description>Used to determine visibility of DD Mandate Script.</description>
        <formula>AND(
NOT(ISBLANK(bankAccountNumber__c)),
NOT(ISBLANK(bankIdentifier__c)),
NOT(ISBLANK(WES_Bank_Name__c)),
NOT(ISBLANK(WES_Bank_Account_Street__c)),
NOT(ISBLANK(WES_Bank_Town_City__c)),
NOT(ISBLANK(WES_Bank_Postcode__c)),
IF(TEXT(DD_Mandate_Method__c) = &quot;Phone&quot; &amp;&amp; ISBLANK(DDMandateCompleteTimestamp__c),FALSE,TRUE),				  
IF(TEXT(DD_Mandate_Method__c) = &quot;Hard-copy&quot; &amp;&amp; ISBLANK(dateofSignature__c),FALSE,TRUE)
)</formula>
        <inlineHelpText>Checks to see if DD Mandate has been successfully completed.</inlineHelpText>
        <label>DD Mandate Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Mandate_Method__c</fullName>
        <inlineHelpText>If phone, must complete DD Mandate Script.
If Hard-Copy, must attach file and complete Name of Signatory.</inlineHelpText>
        <label>DD Mandate Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Hard-copy</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                    <isActive>false</isActive>
                    <label>Online</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Credit_Limit_Recommendation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Credit Limit Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DNB_Failure_Score__c</fullName>
        <label>DNB Failure Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Risk__c</fullName>
        <label>DNB Risk</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <formula>Account__r.DUNS_Number__c</formula>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved in full</fullName>
                </value>
                <value>
                    <fullName>Partially approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Additional_Embossed_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Additional Embossed Line</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Card_Type__c</fullName>
        <label>Default Card Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Esso</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>UK Fuels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diesel_per_month_Litres__c</fullName>
        <label>Diesel used per month (Litres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diesel_used_per_month_GBP__c</fullName>
        <label>Diesel used per month (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diiference_within_5_days__c</fullName>
        <formula>SLA_within_5_days__c  -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diiference within 5 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>361 Esso (WEX) Non-Vas Iso - (Esso National)</fullName>
                </value>
                <value>
                    <fullName>0 Esso (WEX) VAS Iso - (Esso International)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dunning_Classification__c</fullName>
        <label>Dunning Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C01</fullName>
                    <label>Reseller</label>
                </value>
                <value>
                    <fullName>C02</fullName>
                    <label>Government Body</label>
                </value>
                <value>
                    <fullName>C03</fullName>
                    <label>Employee Card</label>
                </value>
                <value>
                    <fullName>C04</fullName>
                    <default>true</default>
                    <label>Standard Customer</label>
                </value>
                <value>
                    <fullName>C05</fullName>
                    <label>Medio Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duty_Exemption_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duty Exemption Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDCCardPacks__c</fullName>
        <label># of EDC Card Packs</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Pack__c.EDCCardType__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EDCCards__c</fullName>
        <label># of EDC Cards</label>
        <summarizedField>WES_Fuel_Card_Pack__c.EDCCards__c</summarizedField>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E_Business_OLS__c</fullName>
        <label>E-Business/OLS?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronic_Marketing_Flag__c</fullName>
        <description>Created for WES EMAP project</description>
        <label>Electronic Marketing Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnquirySourceID__c</fullName>
        <formula>CASE(Opportunity__r.LeadSource,
&quot;Email Campaign&quot;, &quot;AS03&quot;,
&quot;Field Sales&quot;, &quot;AS06&quot;,
&quot;Inbound Phone Enquiry&quot;, &quot;AS10&quot;,
&quot;Direct Mail&quot;, &quot;AS12&quot;,
&quot;Referral From Applicant&quot;, &quot;AS15&quot;,
&quot;Referral From Existing Customer&quot;, &quot;AS16&quot;,
&quot;Partner/Association Lead&quot;, &quot;AS17&quot;,
&quot;Service Station Leaflet&quot;, &quot;AS18&quot;,
&quot;Referral from Site&quot;, &quot;AS19&quot;,
&quot;Outbound TM&quot;, &quot;AS20&quot;,
&quot;Website Application&quot;, &quot;AS23&quot;,					
&quot;Website Enquiry Form&quot;, &quot;AS24&quot;,
&quot;Status Change&quot;, &quot;AS25&quot;,					
NULL)</formula>
        <label>Enquiry Source IFCS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enquiry Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Score__c</fullName>
        <label>Equifax Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EssoCardPacks__c</fullName>
        <label># of Esso Card Packs</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Pack__c.EssoCardType__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EssoCards__c</fullName>
        <label># of Esso Cards</label>
        <summarizedField>WES_Fuel_Card_Pack__c.EssoCards__c</summarizedField>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExistingAccountCheck__c</fullName>
        <label>Existing Account Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Existing Company</fullName>
                </value>
                <value>
                    <fullName>Existing Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failed_Security_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets marked true if Approval Request is rejected.</description>
        <label>Failed Security Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeeComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FeeOverrideComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Override Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FeeProfile__c</fullName>
        <label>Fee Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - All Fees</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - Some Fees</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Few Fees</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - No Fees</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Status_Date__c</fullName>
        <description>Populated by Workflow</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of final decision (i.e., approved, declined, withdrawn, closed)</inlineHelpText>
        <label>Final Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FraudCheck__c</fullName>
        <label>Fraud Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_Risk__c</fullName>
        <formula>CASE(TEXT(Opportunity__r.LeadSource),
&quot;Field Sales&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Telesales&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Legal Entity Change&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Referral from Group&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
&quot;Referral from Applicant&quot;, IMAGE(&quot;/img/samples/flag_orange.gif&quot;,&quot;Orange&quot;),
&quot;Referral from Existing Customer&quot;, IMAGE(&quot;/img/samples/flag_orange.gif&quot;,&quot;Orange&quot;),
&quot;Inbound Phone Enquiry&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
&quot;Website Application&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
&quot;Website Enquiry Form&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;)
					)</formula>
        <label>Fraud Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Radius__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Radius?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FuelCardInfoComplete__c</fullName>
        <formula>IF( 
AND(
NOT(ISBLANK(NameOnCard__c)), 
Total_Fuel_Cards__c &gt; 0, 
Total_Card_Packs__c = FuelCardPackswithDriverVRN__c, 
Total_Fuel_Cards_Needed__c = Total_Fuel_Cards__c
),TRUE,FALSE)</formula>
        <inlineHelpText>Checks to see if all Fuel Card Packs have Driver / VRN and that there the Fuel Cards created match the number needed based on the Card Types selected in the Card packs.</inlineHelpText>
        <label>Fuel Card Info Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FuelCardPackswithDriverVRN__c</fullName>
        <description>When the Driver / VRN has been set, it counts towards the total.</description>
        <inlineHelpText>This number must match # of Fuel Card Packs Requested to be able to proceed with Security Check.</inlineHelpText>
        <label># of Fuel Card Packs with Driver/VRN</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Pack__c.VRN_Driver__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Packs__c</fullName>
        <description>Number of Fuel card packs they need generated for Vehicles / Drivers.</description>
        <inlineHelpText>This number automatically creates new Fuel Card packs with Default Card Type and Card Holder if the number needed is greater than the current number of card packs.</inlineHelpText>
        <label>How many Fuel Card Packs to Generate?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoogleMap__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;
&amp;Account__r.BillingStreet
&amp;&quot;%20&quot;&amp;Account__r.BillingCity										
&amp;&quot;%20&quot;&amp;Account__r.BillingState
&amp;&quot;%20&quot;&amp;Account__r.BillingPostalCode														
,Account__r.BillingStreet
&amp;&quot; &quot;&amp;Account__r.BillingCity										
&amp;&quot; &quot;&amp;Account__r.BillingState
&amp;&quot; &quot;&amp;Account__r.BillingPostalCode)</formula>
        <label>Google Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalAddressLine1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalAddressLine2__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalAddressLine3__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalCompanyName__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalCompanyNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Company Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalContactName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalCountry__c</fullName>
        <description>Used to backfill Radius Application Data. 2 char ISO country iso code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalCounty__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HistoricalMobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HistoricalPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HistoricalPostcode__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Postcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalTitle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>